--- a/code/Explore.ipynb
+++ b/code/Explore.ipynb
@@ -358,17 +358,20 @@
     "\n",
     "1. Bad weather can reduce the number of people taking bike trips\n",
     "2. The weather can actually affect the time it take to get from one trip to another\n",
-    "3. Highest biked paths have the most capacity\n",
-    "4. Most frequent have later starttimes and earlier stoptime\n",
-    "5. Most usertypes are not subscriptions\n",
-    "6. Most riders are during the summer\n",
-    "7. Riders have increased over the years\n",
-    "8. More men ride bikes than women"
+    "3. Highest biked paths have the most bike capacity. \n",
+    "   * If not, there are inefficiencies and the city should invest more resources into that area\n",
+    "4. More people will want to share bikes at later start times\n",
+    "   * People do not want to wake up early\n",
+    "5. More people will want to share bikes at an earlier stoptime\n",
+    "   * People do not want to bike in the dark\n",
+    "5. Most are one time riders and do not purchase bike sharing subscriptions\n",
+    "6. Most riders bike during the summer, when the weather is warm\n",
+    "7. The number of bike sharing riders has increased over the years"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -402,16 +405,32 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 16,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "cloudy          8360\n",
+       "clear            521\n",
+       "rain or snow     430\n",
+       "not clear        102\n",
+       "tstorms           82\n",
+       "Name: events, dtype: int64"
+      ]
+     },
+     "execution_count": 16,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_set['events'].value_counts()"
+   ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [],
    "source": []
   },
   {
