Updates Weather Notebook

--- a/code/Weather_analysis.ipynb
+++ b/code/Weather_analysis.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 35,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -24,6 +24,7 @@
     "import numpy as np\n",
     "import os\n",
     "from matplotlib import pyplot as plt\n",
+    "from scipy.stats import ttest_ind\n",
     "%matplotlib inline"
    ]
   },
@@ -85,33 +86,27 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": 6,
+   "cell_type": "markdown",
    "metadata": {},
-   "outputs": [
-    {
-     "data": {
-      "text/plain": [
-       "Index(['trip_id', 'year', 'month', 'week', 'day', 'hour', 'usertype', 'gender',\n",
-       "       'starttime', 'stoptime', 'tripduration', 'temperature', 'events',\n",
-       "       'from_station_id', 'from_station_name', 'latitude_start',\n",
-       "       'longitude_start', 'dpcapacity_start', 'to_station_id',\n",
-       "       'to_station_name', 'latitude_end', 'longitude_end', 'dpcapacity_end'],\n",
-       "      dtype='object')"
-      ]
-     },
-     "execution_count": 6,
-     "metadata": {},
-     "output_type": "execute_result"
-    }
-   ],
    "source": [
-    "data_set.columns"
+    "Lets combine \"cloudy\" and \"clear\" weather into one category called \"clear\". After all, cloudy does not mean there is precipitation. While we are at it, lets combine rain or snow, not clear, and tstorms into a category called \"bad\"."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 30,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "data_set.loc[data_set['events']=='cloudy','events']='clear'\n",
+    "data_set.loc[data_set['events']=='rain or snow','events']='bad'\n",
+    "data_set.loc[data_set['events']=='not clear','events']='bad'\n",
+    "data_set.loc[data_set['events']=='tstorms','events']='bad'"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 31,
    "metadata": {},
    "outputs": [
     {
@@ -128,7 +123,7 @@
        "Name: tripduration, dtype: float64"
       ]
      },
-     "execution_count": 9,
+     "execution_count": 31,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -141,8 +136,183 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "The trip is in time of trip in seconds"
+    "** Note: The trip time is in units of seconds **"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 32,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tripduration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>events</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bad</th>\n",
+       "      <td>10.523398</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>clear</th>\n",
+       "      <td>11.475052</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        tripduration\n",
+       "events              \n",
+       "bad        10.523398\n",
+       "clear      11.475052"
+      ]
+     },
+     "execution_count": 32,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_set[['events','tripduration']].groupby('events').mean()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 33,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>tripduration</th>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>events</th>\n",
+       "      <th></th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>bad</th>\n",
+       "      <td>6.816047</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>clear</th>\n",
+       "      <td>7.155229</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "        tripduration\n",
+       "events              \n",
+       "bad         6.816047\n",
+       "clear       7.155229"
+      ]
+     },
+     "execution_count": 33,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data_set[['events','tripduration']].groupby('events').std()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Now that we have the mean and standard deviation for the weather, lets test the hypothesis with a t-test!\n",
+    "\n",
+    "The null hypothesis will be that the **trip duration is equal for both clear and bad weather**"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 40,
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "Ttest_indResult(statistic=3.334925788519319, pvalue=0.0008975943228101837)"
+      ]
+     },
+     "execution_count": 40,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "pop1 = data_set[data_set['events']=='clear']['tripduration']\n",
+    "pop2 = data_set[data_set['events']=='bad']['tripduration']\n",
+    "ttest_ind(pop1, pop2, equal_var=False)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "The p-value is 0.0009 which is waaaay lower than the typical p-value threshold of 0.05. Therefore, the probability of obtaining the data's difference of the average trip duration (11.47 seconds for clear weather - 10.52 seconds for bad weather = 0.95 seconds) given that the real difference is zero is 0.09%!\n",
+    "\n",
+    "Due to this low probability, the trip durations are most likely different for clear and bad weather, with **trips taking longer on clear days!**\n",
+    "\n",
+    "What?!?! How can this be? \n",
+    "\n",
+    "Maybe people in chicago take their time on sunny days to enjoy their ride or choose to ride a bike longer distances when it is a beautiful day."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
