Updates to Notebooks

--- a/code/Weather_analysis_old.ipynb
+++ b/code/Weather_analysis_old.ipynb
@@ -16,7 +16,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 22,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -37,12 +37,12 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 2,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
     "os.chdir(\"..\")\n",
-    "data_set = pd.read_csv(\"Datasets/data_randreduced.csv\")\n",
+    "data_set = pd.read_csv(\"Datasets/data.csv\")\n",
     "os.chdir('code')"
    ]
   },
@@ -55,21 +55,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "cloudy          0.880463\n",
-       "clear           0.054871\n",
-       "rain or snow    0.045287\n",
-       "not clear       0.010742\n",
-       "tstorms         0.008636\n",
+       "cloudy          0.884496\n",
+       "clear           0.053903\n",
+       "rain or snow    0.045505\n",
+       "not clear       0.009285\n",
+       "tstorms         0.006755\n",
+       "unknown         0.000056\n",
        "Name: events, dtype: float64"
       ]
      },
-     "execution_count": 4,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -94,36 +95,37 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": 16,
    "metadata": {},
    "outputs": [],
    "source": [
     "data_set.loc[data_set['events']=='cloudy','events']='clear'\n",
     "data_set.loc[data_set['events']=='rain or snow','events']='bad'\n",
     "data_set.loc[data_set['events']=='not clear','events']='bad'\n",
-    "data_set.loc[data_set['events']=='tstorms','events']='bad'"
+    "data_set.loc[data_set['events']=='tstorms','events']='bad'\n",
+    "data_set = data_set[data_set['events']!='unknown']"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 17,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "count    9495.000000\n",
-       "mean       11.413512\n",
-       "std         7.137277\n",
-       "min         2.000000\n",
-       "25%         5.966667\n",
-       "50%         9.616667\n",
-       "75%        15.216667\n",
-       "max        57.866667\n",
+       "count    9.494699e+06\n",
+       "mean     1.144687e+01\n",
+       "std      7.206053e+00\n",
+       "min      2.000000e+00\n",
+       "25%      6.033333e+00\n",
+       "50%      9.633333e+00\n",
+       "75%      1.520000e+01\n",
+       "max      6.000000e+01\n",
        "Name: tripduration, dtype: float64"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -150,7 +152,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 32,
+   "execution_count": 18,
    "metadata": {},
    "outputs": [
     {
@@ -184,11 +186,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>bad</th>\n",
-       "      <td>10.523398</td>\n",
+       "      <td>10.400526</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>clear</th>\n",
-       "      <td>11.475052</td>\n",
+       "      <td>11.515496</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -197,11 +199,11 @@
       "text/plain": [
        "        tripduration\n",
        "events              \n",
-       "bad        10.523398\n",
-       "clear      11.475052"
+       "bad        10.400526\n",
+       "clear      11.515496"
       ]
      },
-     "execution_count": 32,
+     "execution_count": 18,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -212,7 +214,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 19,
    "metadata": {},
    "outputs": [
     {
@@ -246,11 +248,11 @@
        "  <tbody>\n",
        "    <tr>\n",
        "      <th>bad</th>\n",
-       "      <td>6.816047</td>\n",
+       "      <td>6.595985</td>\n",
        "    </tr>\n",
        "    <tr>\n",
        "      <th>clear</th>\n",
-       "      <td>7.155229</td>\n",
+       "      <td>7.238986</td>\n",
        "    </tr>\n",
        "  </tbody>\n",
        "</table>\n",
@@ -259,11 +261,11 @@
       "text/plain": [
        "        tripduration\n",
        "events              \n",
-       "bad         6.816047\n",
-       "clear       7.155229"
+       "bad         6.595985\n",
+       "clear       7.238986"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 19,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -284,16 +286,16 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 40,
+   "execution_count": 21,
    "metadata": {},
    "outputs": [
     {
      "data": {
       "text/plain": [
-       "Ttest_indResult(statistic=3.334925788519319, pvalue=0.0008975943228101837)"
+       "Ttest_indResult(statistic=124.40031228827422, pvalue=0.0)"
       ]
      },
-     "execution_count": 40,
+     "execution_count": 21,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -318,6 +320,13 @@
     "\n",
     "Maybe people in chicago take their time on sunny days to enjoy their ride or choose to ride a bike longer distances when it is a beautiful day."
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
